--- a/package.json
+++ b/package.json
@@ -7,22 +7,42 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"format": "prettier --write .",
+		"lint": "prettier --check . && eslint .",
+		"test:unit": "vitest",
+		"test": "npm run test:unit -- --run"
 	},
 	"devDependencies": {
+		"@eslint/compat": "^1.2.5",
+		"@eslint/js": "^9.18.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@tailwindcss/vite": "^4.0.8",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/svelte": "^5.2.4",
 		"autoprefixer": "^10.4.20",
+		"bits-ui": "^1.3.2",
 		"clsx": "^2.1.1",
+		"eslint": "^9.18.0",
+		"eslint-config-prettier": "^10.0.1",
+		"eslint-plugin-svelte": "^2.46.1",
+		"globals": "^15.14.0",
+		"jsdom": "^25.0.1",
+		"prettier": "^3.4.2",
+		"prettier-plugin-svelte": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.11",
 		"prisma": "^5.22.0",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
-		"tailwind-merge": "^2.5.4",
-		"tailwind-variants": "^0.3.0",
-		"tailwindcss": "^3.4.9",
+		"tailwind-merge": "^2.6.0",
+		"tailwind-variants": "^0.3.1",
+		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.0.0",
-		"vite": "^5.0.3"
+		"typescript-eslint": "^8.20.0",
+		"vite": "^5.0.3",
+		"vitest": "^3.0.0"
 	},
 	"dependencies": {
 		"@auth/prisma-adapter": "^2.7.4",
@@ -32,7 +52,9 @@
 		"@types/ws": "^8.5.14",
 		"events": "^3.3.0",
 		"http": "^0.0.1-security",
+		"mode-watcher": "^0.5.1",
 		"stream": "^0.0.3",
+		"tailwindcss": "^4.0.8",
 		"url": "^0.11.4",
 		"uuid": "^11.0.5",
 		"ws": "^8.18.0"
